--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "homepage": "https://github.com/swisnl/geocoder-php-nationaal-georegister-provider",
     "require": {
-        "php": "^7.3 || ^8.0",
+        "php": "^7.2 || ^8.0",
         "ext-json": "*",
         "geocoder-php/common-http": "^4.0",
         "willdurand/geocoder": "^4.0"
@@ -20,7 +20,7 @@
     "require-dev": {
         "geocoder-php/provider-integration-tests": "^1.0",
         "php-http/curl-client": "^2.0",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0"
     },
     "provide": {
         "geocoder-php/provider-implementation": "1.0"
