--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require-dev": {
         "geocoder-php/provider-integration-tests": "^1.0",
         "php-http/curl-client": "^2.0",
-        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0"
+        "phpunit/phpunit": "^8.0 || ^9.0"
     },
     "provide": {
         "geocoder-php/provider-implementation": "1.0"
