Drop PHP <7.3 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 7.2
   - 7.3
   - 7.4
   - 8.0
@@ -19,8 +18,8 @@ script:
 
 after_script:
   - |
-    wget https://scrutinizer-ci.com/ocular.phar
-    php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    composer global require --no-interaction --prefer-dist scrutinizer/ocular
+    ~/.config/composer/vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
 
 branches:
   only: master
