--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-.phpunit.result.cache
-/.idea
-composer.lock
 composer.phar
+composer.lock
 /vendor/
+/.idea/
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+/.phpunit.result.cache
