--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - travis_retry composer update --no-interaction --prefer-dist
 
 script:
+  - vendor/bin/php-cs-fixer fix -v --dry-run --using-cache=no
   - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
 
 after_script:
