--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "willdurand/geocoder": "^4.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.4",
         "geocoder-php/provider-integration-tests": "^1.5",
         "php-http/curl-client": "^2.0",
         "phpunit/phpunit": "^9.0"
@@ -38,7 +39,9 @@
         "sort-packages": true
     },
     "scripts": {
-        "test": "phpunit"
+        "test": "phpunit",
+        "check-style": "php-cs-fixer fix --dry-run -v",
+        "fix-style": "php-cs-fixer fix"
     },
     "autoload": {
         "psr-4": {
