--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         {
             "name": "Jasper Zonneveld",
             "email": "jasper@swis.nl",
-            "homepage": "https://www.swis.nl/over-ons/jasper-zonneveld",
+            "homepage": "https://www.swis.nl/",
             "role": "Developer"
         }
     ],
