--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         {
             "name": "Jasper Zonneveld",
             "email": "jasper@swis.nl",
-            "homepage": "https://www.swis.nl/",
+            "homepage": "https://github.com/JaZo",
             "role": "Developer"
         }
     ],
