Enable Scrutinizer code rating

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -21,3 +21,10 @@ tools:
   external_code_coverage:
     timeout: 600
     runs: 6
+
+build:
+  nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
