build: allow plugin php-http/discovery

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,10 @@
         }
     ],
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     },
     "scripts": {
         "test": "phpunit",
