--- a/.github/workflows/codestyle.yml
+++ b/.github/workflows/codestyle.yml
@@ -1,6 +1,8 @@
 name: Check code style
 
-on: [ push, pull_request ]
+on:
+  - push
+  - pull_request
 
 jobs:
   php-style:
@@ -8,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Check style
         uses: docker://oskarstark/php-cs-fixer-ga
