--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.9",
         "geocoder-php/provider-integration-tests": "^1.6.4",
-        "php-http/curl-client": "^2.0",
+        "guzzlehttp/guzzle": "^7.9",
         "phpunit/phpunit": "^9.0"
     },
     "provide": {
